k8s/traefik-minikube/minikube-traefik-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik-ui.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: web
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: iio
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: iioat.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: iioat
          servicePort: http
